n/a - update core dependency

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "source": "https://github.com/taddis/flarum-swedish"
     },
     "require": {
-        "flarum/core": "^0.1.0-beta.8"
+        "flarum/core": ">=0.1.0-beta.8 <0.1.0-beta.14"
     },
     "extra": {
         "flarum-extension": {
